# RIO

./: LICENSE  README.md
ars548_driver/: CMakeLists.txt  package.xml
ars548_driver/data_type/: RadarConfiguration.hpp  RadarDetection.hpp  RadarObject.hpp  RadarStatus.hpp  StatusDef.hpp  TypeConverter.hpp  VehicleInfo.hpp
ars548_driver/msg/: AccelerationLateralCog.msg  AccelerationLongitudinalCog.msg  CharacteristicSpeed.msg  DetectionList.msg  Detections.msg  DrivingDirection.msg  (+6 more)
dataset/: .gitignore
docker/: Dockerfile  docker.sh  run.py
rio/: CMakeLists.txt  package.xml  readme.md
rio/config/: RIO.rviz  ars548.yaml  coloradar.yaml
rio/launch/: TestRadar.launch
rio/node/: rio.cpp  rosWarper.cpp  rosWarper.hpp
rio/src/data_manager/: IMUManager.cpp  IMUManager.hpp  RadarManager.cpp  RadarManager.hpp  readme.md
rio/src/factor/: ImuPreintegrationManager.cpp  ImuPreintegrationManager.hpp  RadarFeatureManager.cpp  RadarFeatureManager.hpp
rio/src/frame_type/: IMUFrame.hpp  RadarFrame.hpp
rio/src/frontend/: RadarPreprocessor.cpp  RadarPreprocessor.hpp  RadarTracker.cpp  RadarTracker.hpp  readme.md
rio/src/manifold/: EigenQuaternionManifold.cpp  EigenQuaternionManifold.hpp
rio/src/residual/: IMUResidual.cpp  IMUResidual.hpp  Preintegration.cpp  Preintegration.hpp  RadarImuVelResidual.cpp  RadarImuVelResidual.hpp  RadarPointResidual.cpp  RadarPointResidual.hpp  readme.md
rio/src/state/: IMUState.hpp  R3State.hpp  RadarPointFeatureState.hpp  SE3State.hpp  StateManager.hpp
rio/src/utility/: MathUtility.hpp  TicToc.hpp  Timestamp.hpp  Utility.hpp
(+6 files in other folders)
